<resources>
    <string name="app_name">Weather</string>
    <string name="select_location">Select Location</string>
    <string name="or">Or</string>
    <string name="mark">Mark</string>
    <string name="error_txt">An error occurred!</string>
    <string name="enter_app_for_widget">Please enter the app to launch the widget</string>
    <string name="need_location_permission">Location permission is required!</string>
    <string name="location_permission_description">You need to provide a location permit to find out the weather in your area.</string>
    <string name="give_location_permission">Give location Permission</string>
    <string name="use_location">Use location</string>
    <string name="tempmax">Maximum Temperature</string>
    <string name="tempmin">Minimum Temperature</string>
    <string name="temp">Temperature</string>
    <string name="dew">Dew Point</string>
    <string name="feelslike">Feels like</string>
    <string name="precip">Precipitation</string>
    <string name="precipprob">Precipitation chance</string>
    <string name="precipcover">Precipitation cover</string>
    <string name="preciptype">Precipitation type</string>
    <string name="snow">Snow</string>
    <string name="snowdepth">Snow depth</string>
    <string name="wind">Wind</string>
    <string name="windspeed">Wind speed</string>
    <string name="windgust">Wind gust</string>
    <string name="winddir">Wind direction</string>
    <string name="visibility">Visibility</string>
    <string name="cloudcover">Cloud cover</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Sea level pressure</string>
    <string name="solarradiation">Solar radiation</string>
    <string name="solarenergy">Solar energy</string>
    <string name="uvindex">UV index</string>
    <string name="severerisk">Severe Risk</string>
    <string name="sunrise">Sunrise time</string>
    <string name="sunset">Sunset time</string>
    <string name="moonphase">Moonphase</string>
    <string name="location_not_found">location not found!</string>
    <string name="kph">kph</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">Weather</string>
</resources>